--- a/config.yaml
+++ b/config.yaml
@@ -1,22 +1,73 @@
-# config.yaml
+# Nurse Shark Bot Configuration File
+# A vigilant monitoring system for the Ergo blockchain
+
+#-----------------------------------------------
+# Explorer Configuration
+#-----------------------------------------------
 explorer:
+  # Base URL for the Ergo Explorer API
   url: "https://api.ergoplatform.com/api/v1"
+  # Number of retry attempts for failed requests
   max_retries: 5
+  # Delay between retries in seconds
   retry_delay: 3.0
 
+#-----------------------------------------------
+# Monitoring Settings
+#-----------------------------------------------
 monitoring:
-  check_interval: 15  # seconds
-  hours_lookback: 30
+  # How often to check for new transactions (in seconds)
+  check_interval: 15
+  # How many hours of history to look back when starting up
+  hours_lookback: 24
 
+#-----------------------------------------------
+# Telegram Configuration
+#-----------------------------------------------
 telegram:
-  bot_token: ""
-  # Default chat_id for general notifications (optional)
-  default_chat_id: "" # 
-  default_topic_id: ""  # null means no specific topic
+  # Your Telegram bot token from @BotFather
+  bot_token: "YOUR_BOT_TOKEN_HERE"
+  # Optional: Default chat ID for all notifications
+  # Remove '-100' prefix, it will be added automatically
+  default_chat_id: "CHAT_ID_HERE"
 
+#-----------------------------------------------
+# Addresses to Monitor
+#-----------------------------------------------
 addresses:
-  - address: "9fE5o7913CKKe6wvNgM11vULjTuKiopPcvCaj7t2zcJWXM2gcLu"
-    nickname: "Storage Rent"
+  # Example wallet with topic-specific notifications
+  - address: "9fMPVc6bYFskvThC623vFVVHF6dz5UidYxNhrcGxgzHGKqYWRB7"
+    nickname: "Main Wallet"
     telegram_destinations:
-      - chat_id: ""
-        topic_id:  
+      - chat_id: "CHAT_ID_HERE"
+        topic_id: 12345  # Optional: specific topic ID for forum channels
+
+  # Example for a dApp or smart contract
+  - address: "9f3AaAirSTGYKWqDcw8hEa4Pk4hYiS96VC3Kpcr7CKTuqTiwjCy"
+    nickname: "Trading Bot"
+    telegram_destinations:
+      - chat_id: "CHAT_ID_HERE"
+
+  # Example for a mining address
+  - address: "9hxEvxV6BqPJmWDesy8P1kFoXeQ3wF9ZGxvjak6TAiezr5tu4Sc"
+    nickname: "Mining Wallet"
+    telegram_destinations:
+      - chat_id: "CHAT_ID_HERE"
+
+  # Example for a cold storage wallet
+  - address: "9f3LJK8jvRD76PvTkCZ3pwdpy6B1gmFMWKGKBaMY2dE4Hou3DDz"
+    nickname: "Cold Storage"
+    telegram_destinations:
+      - chat_id: "CHAT_ID_HERE"
+        topic_id: 67890  # Optional: different topic for high-value wallet
+
+#-----------------------------------------------
+# Notes:
+# 1. All addresses should be valid Ergo addresses
+# 2. Nicknames help identify wallets in notifications
+# 3. Telegram chat_ids should be numbers without the '-100' prefix
+# 4. topic_id is optional and only needed for forum channels
+# 5. Multiple telegram_destinations can be specified per address
+# 6. The default_chat_id will receive notifications for addresses
+#    without specific telegram_destinations
+#-----------------------------------------------
