--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,9 @@ services:
     volumes:
       - ./config.yaml:/app/config.yaml
       - ./logs:/app/logs
-    user: "1000:1000"  # Run as non-root user
     restart: unless-stopped
     environment:
-      - TZ=UTC
+      - TZ=UTC  # Set your preferred timezone
+    # You can add environment variables if needed
+    # environment:
+    #   - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
