--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,21 @@
 version: '3.8'
-
 services:
-  ergo-monitor:
+  ergo-bot:
     build: .
-    container_name: ergo-monitor
+    container_name: nurse-shark-bot
     volumes:
-      - ./config.yaml:/app/config.yaml
+      - ./config.yaml:/app/config.yaml:ro
       - ./logs:/app/logs
-    restart: unless-stopped
+      - ./data:/app/data
     environment:
-      - TZ=UTC  # Set your preferred timezone
-    # You can add environment variables if needed
-    # environment:
-    #   - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TZ=UTC
+    restart: unless-stopped
+    # Add this extra_hosts section:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      - ergo-net
+
+networks:
+  ergo-net:
+    driver: bridge
