--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 aiohttp>=3.8.0
-pyyaml>=6.0.1
+python-telegram-bot>=20.0
+pyyaml>=6.0
+pycoingecko>=3.0.0
+pandas>=2.0.0
+numpy>=1.24.0
+asyncio>=3.4.3
+typing-extensions>=4.0.0
 python-dateutil>=2.8.2
+requests>=2.31.0
