--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,15 @@
 version: '3.8'
-services:
-  ergo-bot:
-    build: .
-    container_name: nurse-shark-bot
-    volumes:
-      - ./config.yaml:/app/config.yaml:ro
-      - ./logs:/app/logs
-      - ./data:/app/data
-    environment:
-      - TZ=UTC
-    restart: unless-stopped
-    # Add this extra_hosts section:
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    networks:
-      - ergo-net
 
-networks:
-  ergo-net:
-    driver: bridge
+services:
+  ergo-monitor:
+    build: .
+    container_name: ergo-monitor
+    volumes:
+      - ./config.yaml:/app/config.yaml
+      - ./logs:/app/logs
+    restart: unless-stopped
+    environment:
+      - TZ=UTC  # Set your preferred timezone
+    # You can add environment variables if needed
+    # environment:
+    #   - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
